# agentStudy

./: 01_hallucination_principles.md  01_llm_hallucination_guide.md  02_agent_usage_guide.md  02_agent_usage_guide_audit_report.md  02_model_mitigation_strategies.md  03_coding_agent_reliability_checklist.md  03_practical_playbook.md  README.md  coding-agent-reliability.md  llm_hallucination.md  llm_hallucination_evolution.md
demo/cpp-agent-repair/: .gitignore  README.md
demo/cpp-agent-repair/oracle/: fuzz_smoke.c  hidden_tests.c
demo/cpp-agent-repair/project/: CMakeLists.txt
demo/cpp-agent-repair/project/include/: safe_ops.h
demo/cpp-agent-repair/project/src/: safe_ops.c
demo/cpp-agent-repair/project/tests/: public_tests.c
demo/cpp-agent-repair/prompts/: 01_one_shot.md  02_public_test_loop.md  03_reliable_flow.md
demo/cpp-agent-repair/results/: agent_prompt_strategy_report.md
demo/cpp-agent-repair/scripts/: run_demo.sh
docs/: 01_foundations.md  02_agent_usage_guide.md  02_coding_agent_playbook.md  03_personal_practice.md  04_coding_agent_reliability_experiment.md  coding-agent-reliability.md
docs/assets/foundations/: README.md
lab/curl-variable-long-task/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  config.env
lab/curl-variable-long-task/docker/: Dockerfile
lab/curl-variable-long-task/evaluator/: black_box_tests.sh
lab/curl-variable-long-task/scripts/: check_host.sh  collect_patch.sh  common.sh  evaluate.sh  (+9 more)
lab/swebench-fmt-2310/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  config.env
references/: README.md  benchmark_selection.md
(+41 files in other folders)
